# pyroll-report

./: README.md  hatch.toml  pyproject.toml
pyroll/report/: __init__.py  cli.py  config.py  hookspecs.py  pluggy.py  report.py  utils.py
pyroll/report/unit_display/: __init__.py  format.py  format_guards.py  format_special_numbers.py  plots.py  properties.py  units.py
tests/: test_cli.py  test_format.py  test_only_transport_solve_and_report.py  test_report_to.py  test_show_report.py  test_solve_and_report.py  test_solve_and_report_3rp.py
