[tool.poetry]
name = "pyroll-report"
version = "2.0.0a1"
description = "PyRoll rolling simulation framework - HTML report generation."
authors = [
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
    "Max Stirl <max.stirl@imf.tu-freiberg.de>"
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io"
repository = "https://github.com/pyroll-project/pyroll-core"
documentation = "https://pyroll.readthedocs.io/en/latest"
packages = [
    { include = "pyroll/report" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
matplotlib = "^3.5.0"
Jinja2 = "^3.0.3"
pluggy = "^1.0.0"
pyroll = "^2.0.0a"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
pyroll = 'pyroll.ui.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
